{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 18,
  "lineage": "8494dbfc-eac6-a1d2-5562-adb0214c6ed0",
  "resources": [
    {
      "module": "module.dev-infra",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:378788318154:vpc/vpc-01886ff74bb665fd5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-01a1a598400041f3e",
            "default_route_table_id": "rtb-090249265e0c8ce75",
            "default_security_group_id": "sg-014854790a70e155f",
            "dhcp_options_id": "dopt-0f669367d0f4962ff",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-01886ff74bb665fd5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-090249265e0c8ce75",
            "owner_id": "378788318154",
            "region": "us-east-1",
            "tags": {
              "Name": "Default VPC"
            },
            "tags_all": {
              "Name": "Default VPC"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.dev-infra",
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0b6c6ebed2801a5cb",
            "arn": "arn:aws:ec2:us-east-1:378788318154:instance/i-046d53578eead226b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-046d53578eead226b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dev-infra-app-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0043a1ad97535285b"
              }
            ],
            "primary_network_interface_id": "eni-0043a1ad97535285b",
            "private_dns": "ip-172-31-29-39.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.29.39",
            "public_dns": "ec2-54-174-131-161.compute-1.amazonaws.com",
            "public_ip": "54.174.131.161",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-00b21e28133ecc7d7",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "dev-infra-app-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01680221fffd88039",
            "tags": {
              "Environment": "dev",
              "Name": "dev-infra-app-instance"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-infra-app-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d95dbc589b195ce4"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "378788318154",
            "id": "i-046d53578eead226b",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.dev-infra.aws_default_vpc.default",
            "module.dev-infra.aws_key_pair.my_key",
            "module.dev-infra.aws_security_group.allow_ssh_http"
          ]
        }
      ]
    },
    {
      "module": "module.dev-infra",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:378788318154:security-group/sg-0d95dbc589b195ce4",
            "description": "Allow SSH and HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d95dbc589b195ce4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dev-infra-app-sg",
            "name_prefix": "",
            "owner_id": "378788318154",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "dev-infra-app-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-infra-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01886ff74bb665fd5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "378788318154",
            "id": "sg-0d95dbc589b195ce4",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.dev-infra.aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.prod-infra",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:378788318154:vpc/vpc-01886ff74bb665fd5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-01a1a598400041f3e",
            "default_route_table_id": "rtb-090249265e0c8ce75",
            "default_security_group_id": "sg-014854790a70e155f",
            "dhcp_options_id": "dopt-0f669367d0f4962ff",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-01886ff74bb665fd5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-090249265e0c8ce75",
            "owner_id": "378788318154",
            "region": "us-east-1",
            "tags": {
              "Name": "Default VPC"
            },
            "tags_all": {
              "Name": "Default VPC"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.prod-infra",
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0b6c6ebed2801a5cb",
            "arn": "arn:aws:ec2:us-east-1:378788318154:instance/i-0762b40f127eac503",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0762b40f127eac503",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "prod-infra-app-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-09ddaf19fed300ddf"
              }
            ],
            "primary_network_interface_id": "eni-09ddaf19fed300ddf",
            "private_dns": "ip-172-31-26-101.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.26.101",
            "public_dns": "ec2-54-167-47-145.compute-1.amazonaws.com",
            "public_ip": "54.167.47.145",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02ab14f008529d362",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "prod-infra-app-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01680221fffd88039",
            "tags": {
              "Environment": "prod",
              "Name": "prod-infra-app-instance"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-infra-app-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01bb6e9ae83923251"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "378788318154",
            "id": "i-0762b40f127eac503",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.prod-infra.aws_default_vpc.default",
            "module.prod-infra.aws_key_pair.my_key",
            "module.prod-infra.aws_security_group.allow_ssh_http"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0b6c6ebed2801a5cb",
            "arn": "arn:aws:ec2:us-east-1:378788318154:instance/i-0beccc5be38edb46e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0beccc5be38edb46e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "prod-infra-app-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-079e10c967c859001"
              }
            ],
            "primary_network_interface_id": "eni-079e10c967c859001",
            "private_dns": "ip-172-31-22-44.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.22.44",
            "public_dns": "ec2-52-23-170-32.compute-1.amazonaws.com",
            "public_ip": "52.23.170.32",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d6e4875db5f2a9e7",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "prod-infra-app-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01680221fffd88039",
            "tags": {
              "Environment": "prod",
              "Name": "prod-infra-app-instance"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-infra-app-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01bb6e9ae83923251"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "378788318154",
            "id": "i-0beccc5be38edb46e",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.prod-infra.aws_default_vpc.default",
            "module.prod-infra.aws_key_pair.my_key",
            "module.prod-infra.aws_security_group.allow_ssh_http"
          ]
        }
      ]
    },
    {
      "module": "module.prod-infra",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:378788318154:security-group/sg-01bb6e9ae83923251",
            "description": "Allow SSH and HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01bb6e9ae83923251",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "prod-infra-app-sg",
            "name_prefix": "",
            "owner_id": "378788318154",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "prod-infra-app-sg"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-infra-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01886ff74bb665fd5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "378788318154",
            "id": "sg-01bb6e9ae83923251",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.prod-infra.aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.stg-infra",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:378788318154:vpc/vpc-01886ff74bb665fd5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-01a1a598400041f3e",
            "default_route_table_id": "rtb-090249265e0c8ce75",
            "default_security_group_id": "sg-014854790a70e155f",
            "dhcp_options_id": "dopt-0f669367d0f4962ff",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-01886ff74bb665fd5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-090249265e0c8ce75",
            "owner_id": "378788318154",
            "region": "us-east-1",
            "tags": {
              "Name": "Default VPC"
            },
            "tags_all": {
              "Name": "Default VPC"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.stg-infra",
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0b6c6ebed2801a5cb",
            "arn": "arn:aws:ec2:us-east-1:378788318154:instance/i-08215e577bc4312d8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08215e577bc4312d8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "stg-infra-app-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-04151315c8679884f"
              }
            ],
            "primary_network_interface_id": "eni-04151315c8679884f",
            "private_dns": "ip-172-31-26-156.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.26.156",
            "public_dns": "ec2-54-147-50-39.compute-1.amazonaws.com",
            "public_ip": "54.147.50.39",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-022c96f703554342f",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "stg-infra-app-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01680221fffd88039",
            "tags": {
              "Environment": "stg",
              "Name": "stg-infra-app-instance"
            },
            "tags_all": {
              "Environment": "stg",
              "Name": "stg-infra-app-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-040d464dd86266d25"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "378788318154",
            "id": "i-08215e577bc4312d8",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.stg-infra.aws_default_vpc.default",
            "module.stg-infra.aws_key_pair.my_key",
            "module.stg-infra.aws_security_group.allow_ssh_http"
          ]
        }
      ]
    },
    {
      "module": "module.stg-infra",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:378788318154:security-group/sg-040d464dd86266d25",
            "description": "Allow SSH and HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-040d464dd86266d25",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "stg-infra-app-sg",
            "name_prefix": "",
            "owner_id": "378788318154",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "stg",
              "Name": "stg-infra-app-sg"
            },
            "tags_all": {
              "Environment": "stg",
              "Name": "stg-infra-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01886ff74bb665fd5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "378788318154",
            "id": "sg-040d464dd86266d25",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.stg-infra.aws_default_vpc.default"
          ]
        }
      ]
    }
  ]
}